# controller-learning

./: .gitattributes  .gitignore  ACTIVE_CONTEXT.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTEXT.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  STATUS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmarks/: README.md
benchmarks/v0.1/: gpu_report.json  m1_cpu_report.json  m4_environment_report.json  m5_track_pool_report.json  m7_ppo_controller_evaluation_report.json  m7_ppo_export_report.json  m7_ppo_replay_trajectory.json  m7_ppo_selection_report.json  m8_attempt_001_failure_report.json  m8_final_evaluation_report.json  m8_final_results.csv  track_capacity_report.json  track_driveability_report.json
configs/: README.md  benchmark.toml  final_evaluation.toml  ppo.toml  ppo_controller_evaluation.toml  ppo_selection.toml  track.toml  vehicle.toml
configs/levels/: level0.toml  level1.toml
controller_learning/: __init__.py  _version.py
controller_learning/assets/vehicle/: car.xml
controller_learning/config/: __init__.py  loader.py  models.py
controller_learning/control/: __init__.py  base.py  configuration.py  debug_draw.py  geometry.py  identity.py  loader.py  runner.py  speed_profile.py
controller_learning/diagnostics/: __init__.py  gpu.py
controller_learning/envs/: __init__.py  _vehicle_driver.py  car_racing.py  configuration.py  episode.py  observation.py  race_core.py  registration.py  vector_racing.py
controller_learning/evaluation/: __init__.py  attempt_transaction.py  controller.py  controller_identity.py  final_benchmark.py  final_execution.py  final_metrics.py  final_preflight.py  final_report.py  final_results.py  final_runtime.py  replacement.py  source_tree_identity.py  test_access.py  test_assets.py  trajectory.py
controller_learning/physics/: __init__.py  actuation.py  cpu_reference.py  m1_benchmark.py  m2_benchmark.py  mjx_warp.py  model.py
controller_learning/rl/: __init__.py  artifacts.py  assets.py  collector.py  configuration.py  controller_benchmark.py  controller_export.py  export_protocol.py  features.py  numpy_actor.py  policy.py  ppo.py  reward.py  rollout.py  schema.py  selection.py  selection_observation.py  torch_bridge.py  trainer.py  validation_assets.py
controller_learning/tracks/: __init__.py  admission.py  assets.py  capacity_benchmark.py  driveability.py  generator.py  geometry.py  hashing.py  level0.py  official_assets.py  pool.py  specs.py  types.py  validator.py
controller_learning/visualization/: __init__.py  final_results.py  renderer_2d.py  replay.py
controllers/: README.md
controllers/mpc/: README.md  config.toml  controller.py  helpers.py  solver.py
controllers/pid/: README.md  config.toml  controller.py  helpers.py
controllers/ppo/: README.md  config.toml  controller.py  metadata.json  policy.npz
controllers/template/: README.md  config.toml  controller.py
docs/: analysis.md  controllers.md  development.md  environment.md  evaluation.md  getting-started.md  gpu.md  index.md  ppo.md  reproducibility.md  stability.md  tracks.md  vehicle.md
scripts/: analyze_m8_results.py  benchmark_cpu_vehicle.py  benchmark_gpu.py  benchmark_gpu_worker.py  benchmark_m6_controllers.py  benchmark_m7_ppo.py  benchmark_m7_ppo_controller.py  benchmark_m8_controllers.py  benchmark_racing_env.py  benchmark_track_capacity.py  benchmark_track_pool.py  build_track_assets.py  check_gpu_environment.py  evaluate_controller.py  export_m7_ppo_controller.py  materialize_track_pool.py  replay.py  sim.py  train_ppo.py  validate_track_driveability.py  verify_track_assets.py  view_cpu_vehicle.py
tests/fixtures/: ppo_unfinalized_config.toml
tests/gpu/: README.md  conftest.py  test_collector.py  test_environment.py  test_m7_ppo_selection.py  test_m8_recovery_imports.py  test_mjx_warp_vehicle.py  test_numpy_actor.py  test_policy.py  test_ppo.py  test_ppo_controller.py  test_race_core.py  test_racing_env.py  test_torch_bridge.py  test_track_driveability.py  test_train_ppo_cli.py  test_trainer.py
tests/integration/: README.md  test_casadi_installation.py  test_controller_environment.py  test_distribution.py  test_mujoco_installation.py  test_official_track_assets.py
tests/integration/physics/: test_cpu_vehicle.py  test_cpu_vehicle_dynamics.py
tests/unit/: test_config.py  test_package.py
tests/unit/control/: test_base_and_loader.py  test_controller_runner.py  test_debug_draw.py  test_geometry.py  test_identity.py  test_mpc_controller.py  test_mpc_solver.py  test_pid_controller.py  test_public_configuration.py  test_speed_profile.py
tests/unit/envs/: test_car_racing.py  test_configuration.py  test_episode.py  test_observation.py  test_race_core.py  test_registration.py  test_vector_racing.py  test_vehicle_driver.py
tests/unit/evaluation/: test_attempt_transaction.py  test_controller_evaluation.py  test_controller_identity.py  test_final_benchmark.py  test_final_execution.py  test_final_metrics.py  test_final_preflight.py  test_final_report.py  test_final_results.py  test_final_runtime.py  test_m8_test_assets.py  test_replacement.py  test_source_tree_identity.py  test_test_access.py  test_trajectory.py
tests/unit/physics/: test_actuation.py  test_m1_benchmark.py  test_m2_benchmark.py  test_mjx_warp_contract.py  test_model.py
tests/unit/rl/: test_artifacts.py  test_assets.py  test_configuration.py  test_controller_benchmark.py  test_controller_export.py  test_features.py  test_numpy_actor.py  test_reward.py  test_rollout.py  test_selection.py  test_validation_assets.py
tests/unit/scripts/: test_analyze_m8_results.py  test_evaluate_controller_cli.py  test_m4_environment_benchmark_cli.py  test_m4_sim_cli.py  test_m5_track_admission_cli.py  test_m5_track_asset_cli.py  test_m5_track_pool_benchmark_cli.py  test_m6_controller_benchmark_cli.py  test_m7_ppo_controller_cli.py  test_m7_ppo_export_cli.py  test_m7_ppo_selection_cli.py  test_m7_train_ppo_cli.py  test_m8_final_cli.py  test_replay_cli.py
tests/unit/tracks/: test_admission.py  test_assets.py  test_capacity_benchmark.py  test_generator.py  (+9 more)
(+25 files in other folders)
